--- a/index.html
+++ b/index.html
@@ -42,9 +42,21 @@
         }
 
         .logo {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            color: #2563eb;
+        }
+
+        .logo img {
+            height: 40px;
+            width: auto;
+            margin-right: 10px;
+        }
+
+        .logo-text {
             font-size: 1.8rem;
             font-weight: 700;
-            color: #2563eb;
         }
 
         .nav-links {
@@ -65,7 +77,7 @@
         }
 
         .cta-button {
-            background: #2563eb;
+            background: #0f2a63;
             color: white;
             padding: 0.75rem 1.5rem;
             border: none;
@@ -485,6 +497,14 @@
                 display: none;
             }
 
+            .logo img {
+                height: 35px;
+            }
+
+            .logo-text {
+                font-size: 1.6rem;
+            }
+
             .hero h1 {
                 font-size: 2.5rem;
             }
@@ -549,7 +569,10 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo">Proyak</div>
+            <a href="#" class="logo">
+                <img src="logo.png" alt="Proyak Logo">
+                <!-- <span class="logo-text">Proyak</span> -->
+            </a>
             <ul class="nav-links">
                 <li><a href="#features">Features</a></li>
                 <li><a href="#how-it-works">How It Works</a></li>
